[tool.poetry]
name = "plot_calculator"
version = "1.0.0"
description = "Facilitate calculation and plotting in python with examples."
authors = ["eayin2 <<>>"]

[tool.poetry.dependencies]
python = ">=3.7, <3.10"
numpy = "^1.19.0"
matplotlib = "^3.3.0"
pyside2 = "^5.15.0"
sympy = "^1.6.2"
scipy = "^1.5.0"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
plot_calculator = "plot_calculator.calculator:start_calculator"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"